// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> Basic equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="h-full"
  >
    <div
      class="border-noround surface-0 h-full"
    >
      <div
        class="flex flex-column"
        style="height: 768px;"
      >
        <div
          class="headerContainer-0-2-6"
        >
          <div
            class="flex align-items-center justify-content-center"
          >
            <div
              class="hidden p-component lg:block headerLogo-0-2-8"
            />
            <div
              class="hidden p-component text-lg lg:block headerTitle-0-2-7"
            >
              test app
            </div>
            <div
              class="p-menubar p-component menuGrow-0-2-10"
              style="background: none;"
            >
              <a
                class="p-menubar-button"
                href="#"
                role="button"
                tabindex="0"
              >
                <i
                  class="pi pi-bars"
                />
              </a>
              <ul
                class="p-menubar-root-list"
                role="menubar"
              >
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="false"
                    class="p-menuitem-link"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                    >
                       🏠 
                    </span>
                  </a>
                </li>
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="true"
                    class="p-menuitem-link"
                    data-testid="portal-menu_main"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_main"
                    >
                      Main
                    </span>
                    <span
                      class="p-submenu-icon pi pi-angle-down"
                    />
                  </a>
                  <ul
                    class="p-submenu-list"
                    role="menu"
                  >
                    <li
                      class="p-menuitem"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menu_page1"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-label_page1"
                        >
                          Page 1
                        </span>
                      </a>
                    </li>
                    <li
                      class="p-menuitem"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menu_page2"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-label_page2"
                        >
                          Page 2
                        </span>
                      </a>
                    </li>
                  </ul>
                </li>
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="false"
                    class="p-menuitem-link"
                    data-testid="portal-menu_page3"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_page3"
                    >
                      Page 3
                    </span>
                  </a>
                </li>
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="false"
                    class="p-menuitem-link"
                    data-testid="portal-menu_granted"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_granted"
                    >
                      Granted
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <button
              class="p-button p-component p-button-icon-only"
            >
              <span
                class="p-button-icon p-c pi pi-sun"
              />
              <span
                class="p-button-label p-c"
              >
                 
              </span>
            </button>
            <div
              class="p-menubar p-component rightMenu-0-2-12"
              style="background: none;"
            >
              <a
                class="p-menubar-button"
                href="#"
                role="button"
                tabindex="0"
              >
                <i
                  class="pi pi-bars"
                />
              </a>
              <ul
                class="p-menubar-root-list"
                role="menubar"
              >
                <li
                  class="p-menuitem"
                  id="/profile"
                  role="none"
                >
                  <a
                    aria-haspopup="true"
                    class="p-menuitem-link"
                    data-testid="portal-menu_profile"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-icon user"
                    />
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_profile"
                    >
                      SA
                    </span>
                    <span
                      class="p-submenu-icon pi pi-angle-down"
                    />
                  </a>
                  <ul
                    class="p-submenu-list"
                    role="menu"
                  >
                    <li
                      class="p-menuitem"
                      id="help"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menuhelp"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-labelhelp"
                        >
                          Help
                        </span>
                      </a>
                    </li>
                    <li
                      class="p-menuitem"
                      id="profile"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menuprofile"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-labelprofile"
                        >
                          Profile
                        </span>
                      </a>
                    </li>
                    <li
                      class="p-menuitem"
                      id="/logout"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menu_logout"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-label_logout"
                        >
                          Logout
                        </span>
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="p-tabview p-component tabs-0-2-9"
        >
          <div
            class="p-tabview-nav-container"
          >
            <div
              class="p-tabview-nav-content"
              id="pr_id_1"
            >
              <ul
                class="p-tabview-nav"
                role="tablist"
              >
                <li
                  class="p-unselectable-text p-tabview-selected p-highlight"
                  role="presentation"
                >
                  <a
                    aria-controls="pr_id_1_content_0"
                    aria-selected="true"
                    class="p-tabview-nav-link"
                    id="pr_id_1_header_0"
                    role="tab"
                    tabindex="0"
                  >
                    <span
                      class="p-tabview-title"
                    >
                      <span
                        data-testid="portal-tab_"
                      >
                        Dashboard
                          
                        <i
                          class="pi pi-times vertical-align-bottom"
                          data-testid="portal-tab-close_"
                        />
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="p-tabview-ink-bar"
                  style="left: 0px;"
                />
              </ul>
            </div>
          </div>
          <div
            class="p-tabview-panels"
          >
            <div
              aria-hidden="false"
              aria-labelledby="pr_id_1_header_0"
              class="p-tabview-panel"
              id="pr_id_1_content_0"
              role="tabpanel"
            >
              <div>
                dashboard content
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<App /> BasicAR equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="h-full"
  >
    <div
      class="border-noround surface-0 h-full"
    >
      <div
        class="flex flex-column"
        style="height: 768px;"
      >
        <div
          class="headerContainer-0-2-6"
        >
          <div
            class="flex align-items-center justify-content-center"
          >
            <div
              class="hidden p-component lg:block headerLogo-0-2-8"
            />
            <div
              class="hidden p-component text-lg lg:block headerTitle-0-2-7"
            >
              تطبيق الاختبار
            </div>
            <div
              class="p-menubar p-component menuGrow-0-2-10"
              style="background: none;"
            >
              <a
                class="p-menubar-button"
                href="#"
                role="button"
                tabindex="0"
              >
                <i
                  class="pi pi-bars"
                />
              </a>
              <ul
                class="p-menubar-root-list"
                role="menubar"
              >
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="false"
                    class="p-menuitem-link"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                    >
                       🏠 
                    </span>
                  </a>
                </li>
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="true"
                    class="p-menuitem-link"
                    data-testid="portal-menu_main"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_main"
                    >
                      رئيسي
                    </span>
                    <span
                      class="p-submenu-icon pi pi-angle-down"
                    />
                  </a>
                  <ul
                    class="p-submenu-list"
                    role="menu"
                  >
                    <li
                      class="p-menuitem"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menu_page1"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-label_page1"
                        >
                          صفحة 1
                        </span>
                      </a>
                    </li>
                    <li
                      class="p-menuitem"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menu_page2"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-label_page2"
                        >
                          الصفحة 2
                        </span>
                      </a>
                    </li>
                  </ul>
                </li>
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="false"
                    class="p-menuitem-link"
                    data-testid="portal-menu_page3"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_page3"
                    >
                      الصفحة 3
                    </span>
                  </a>
                </li>
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="false"
                    class="p-menuitem-link"
                    data-testid="portal-menu_granted"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_granted"
                    >
                      ممنوح
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <button
              class="p-button p-component p-button-icon-only"
            >
              <span
                class="p-button-icon p-c pi pi-sun"
              />
              <span
                class="p-button-label p-c"
              >
                 
              </span>
            </button>
            <div
              class="p-menubar p-component rightMenu-0-2-12"
              style="background: none;"
            >
              <a
                class="p-menubar-button"
                href="#"
                role="button"
                tabindex="0"
              >
                <i
                  class="pi pi-bars"
                />
              </a>
              <ul
                class="p-menubar-root-list"
                role="menubar"
              >
                <li
                  class="p-menuitem"
                  id="/profile"
                  role="none"
                >
                  <a
                    aria-haspopup="true"
                    class="p-menuitem-link"
                    data-testid="portal-menu_profile"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-icon user"
                    />
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_profile"
                    >
                      SA
                    </span>
                    <span
                      class="p-submenu-icon pi pi-angle-down"
                    />
                  </a>
                  <ul
                    class="p-submenu-list"
                    role="menu"
                  >
                    <li
                      class="p-menuitem"
                      id="help"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menuhelp"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-labelhelp"
                        >
                          مساعدة
                        </span>
                      </a>
                    </li>
                    <li
                      class="p-menuitem"
                      id="profile"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menuprofile"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-labelprofile"
                        >
                          ملف تعريفي للمستخدم
                        </span>
                      </a>
                    </li>
                    <li
                      class="p-menuitem"
                      id="/logout"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menu_logout"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-label_logout"
                        >
                          تسجيل خروج
                        </span>
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="p-tabview p-component tabs-0-2-9"
        >
          <div
            class="p-tabview-nav-container"
          >
            <div
              class="p-tabview-nav-content"
              id="pr_id_5"
            >
              <ul
                class="p-tabview-nav"
                role="tablist"
              >
                <li
                  class="p-unselectable-text p-tabview-selected p-highlight"
                  role="presentation"
                >
                  <a
                    aria-controls="pr_id_5_content_0"
                    aria-selected="true"
                    class="p-tabview-nav-link"
                    id="pr_id_5_header_0"
                    role="tab"
                    tabindex="0"
                  >
                    <span
                      class="p-tabview-title"
                    >
                      <span
                        data-testid="portal-tab_"
                      >
                        لوحة القيادة
                          
                        <i
                          class="pi pi-times vertical-align-bottom"
                          data-testid="portal-tab-close_"
                        />
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="p-tabview-ink-bar"
                  style="left: 0px;"
                />
              </ul>
            </div>
          </div>
          <div
            class="p-tabview-panels"
          >
            <div
              aria-hidden="false"
              aria-labelledby="pr_id_5_header_0"
              class="p-tabview-panel"
              id="pr_id_5_content_0"
              role="tabpanel"
            >
              <div>
                محتوى لوحة القيادة
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<App /> BasicBG equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="h-full"
  >
    <div
      class="border-noround surface-0 h-full"
    >
      <div
        class="flex flex-column"
        style="height: 768px;"
      >
        <div
          class="headerContainer-0-2-6"
        >
          <div
            class="flex align-items-center justify-content-center"
          >
            <div
              class="hidden p-component lg:block headerLogo-0-2-8"
            />
            <div
              class="hidden p-component text-lg lg:block headerTitle-0-2-7"
            >
              тест приложение
            </div>
            <div
              class="p-menubar p-component menuGrow-0-2-10"
              style="background: none;"
            >
              <a
                class="p-menubar-button"
                href="#"
                role="button"
                tabindex="0"
              >
                <i
                  class="pi pi-bars"
                />
              </a>
              <ul
                class="p-menubar-root-list"
                role="menubar"
              >
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="false"
                    class="p-menuitem-link"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                    >
                       🏠 
                    </span>
                  </a>
                </li>
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="true"
                    class="p-menuitem-link"
                    data-testid="portal-menu_main"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_main"
                    >
                      Главно
                    </span>
                    <span
                      class="p-submenu-icon pi pi-angle-down"
                    />
                  </a>
                  <ul
                    class="p-submenu-list"
                    role="menu"
                  >
                    <li
                      class="p-menuitem"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menu_page1"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-label_page1"
                        >
                          Страница 1
                        </span>
                      </a>
                    </li>
                    <li
                      class="p-menuitem"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menu_page2"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-label_page2"
                        >
                          Страница 2
                        </span>
                      </a>
                    </li>
                  </ul>
                </li>
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="false"
                    class="p-menuitem-link"
                    data-testid="portal-menu_page3"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_page3"
                    >
                      Страница 3
                    </span>
                  </a>
                </li>
                <li
                  class="p-menuitem"
                  role="none"
                >
                  <a
                    aria-haspopup="false"
                    class="p-menuitem-link"
                    data-testid="portal-menu_granted"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_granted"
                    >
                      Достъпно
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <button
              class="p-button p-component p-button-icon-only"
            >
              <span
                class="p-button-icon p-c pi pi-sun"
              />
              <span
                class="p-button-label p-c"
              >
                 
              </span>
            </button>
            <div
              class="p-menubar p-component rightMenu-0-2-12"
              style="background: none;"
            >
              <a
                class="p-menubar-button"
                href="#"
                role="button"
                tabindex="0"
              >
                <i
                  class="pi pi-bars"
                />
              </a>
              <ul
                class="p-menubar-root-list"
                role="menubar"
              >
                <li
                  class="p-menuitem"
                  id="/profile"
                  role="none"
                >
                  <a
                    aria-haspopup="true"
                    class="p-menuitem-link"
                    data-testid="portal-menu_profile"
                    href="#"
                    role="menuitem"
                  >
                    <span
                      class="p-menuitem-icon user"
                    />
                    <span
                      class="p-menuitem-text"
                      data-testid="portal-menu-label_profile"
                    >
                      SA
                    </span>
                    <span
                      class="p-submenu-icon pi pi-angle-down"
                    />
                  </a>
                  <ul
                    class="p-submenu-list"
                    role="menu"
                  >
                    <li
                      class="p-menuitem"
                      id="help"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menuhelp"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-labelhelp"
                        >
                          Помощ
                        </span>
                      </a>
                    </li>
                    <li
                      class="p-menuitem"
                      id="profile"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menuprofile"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-labelprofile"
                        >
                          Профил
                        </span>
                      </a>
                    </li>
                    <li
                      class="p-menuitem"
                      id="/logout"
                      role="none"
                    >
                      <a
                        aria-haspopup="false"
                        class="p-menuitem-link"
                        data-testid="portal-menu_logout"
                        href="#"
                        role="menuitem"
                      >
                        <span
                          class="p-menuitem-text"
                          data-testid="portal-menu-label_logout"
                        >
                          Изход
                        </span>
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="p-tabview p-component tabs-0-2-9"
        >
          <div
            class="p-tabview-nav-container"
          >
            <div
              class="p-tabview-nav-content"
              id="pr_id_3"
            >
              <ul
                class="p-tabview-nav"
                role="tablist"
              >
                <li
                  class="p-unselectable-text p-tabview-selected p-highlight"
                  role="presentation"
                >
                  <a
                    aria-controls="pr_id_3_content_0"
                    aria-selected="true"
                    class="p-tabview-nav-link"
                    id="pr_id_3_header_0"
                    role="tab"
                    tabindex="0"
                  >
                    <span
                      class="p-tabview-title"
                    >
                      <span
                        data-testid="portal-tab_"
                      >
                        Табло
                          
                        <i
                          class="pi pi-times vertical-align-bottom"
                          data-testid="portal-tab-close_"
                        />
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="p-tabview-ink-bar"
                  style="left: 0px;"
                />
              </ul>
            </div>
          </div>
          <div
            class="p-tabview-panels"
          >
            <div
              aria-hidden="false"
              aria-labelledby="pr_id_3_header_0"
              class="p-tabview-panel"
              id="pr_id_3_content_0"
              role="tabpanel"
            >
              <div>
                табло съдържание
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<App /> Register equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-component loginContainer-0-2-17"
  >
    <div
      class="loginLogo-0-2-18 loginPageHeader-0-2-19"
    />
    <div
      class="loginForm-0-2-21 shadow-3"
    >
      <div
        class="loginTitle-0-2-24"
      >
        Login with password
      </div>
      
      <form
        autocomplete="off"
        class="card formContainer-0-2-22"
      >
        <div
          class="field col-12 p-2"
        >
          <span
            class="p-float-label"
          >
            <input
              class="p-inputtext p-component w-full"
              name="username"
            />
            <label
              class=""
            >
              Username
            </label>
          </span>
        </div>
        <div
          class="field col-12 p-2"
        >
          <span
            class="p-float-label"
          >
            <div
              class="p-password p-component p-inputwrapper w-full"
            >
              <input
                class="p-inputtext p-component p-password-input w-full"
                name="password"
                type="password"
              />
            </div>
            <label
              class=""
            >
              Password
            </label>
          </span>
        </div>
        <div
          class="field col-12 p-2 mb-0"
        >
          <button
            aria-label="Login"
            class="p-button p-component w-full"
            type="submit"
          >
            <span
              class="p-button-label p-c"
            >
              Login
            </span>
          </button>
        </div>
      </form>
    </div>
    <div
      class="loginLogo-0-2-18 loginPageFooter-0-2-20"
    />
  </div>
  <div
    class="fixed m-2 right-0"
  >
    <button
      class="p-button p-component mr-2"
      data-testid="register"
      id="/register"
      type="button"
    >
      <span
        class="p-button-label p-c"
      >
        Register
      </span>
    </button>
    <button
      class="p-button p-component p-button-icon-only"
    >
      <span
        class="p-button-icon p-c pi pi-sun"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </div>
</div>
`;

exports[`<App /> RegisterAR equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-component loginContainer-0-2-17"
  >
    <div
      class="loginLogo-0-2-18 loginPageHeader-0-2-19"
    />
    <div
      class="loginForm-0-2-21 shadow-3"
    >
      <div
        class="loginTitle-0-2-24"
      >
        تسجيل الدخول بكلمة مرور
      </div>
      
      <form
        autocomplete="off"
        class="card formContainer-0-2-22"
      >
        <div
          class="field col-12 p-2"
        >
          <span
            class="p-float-label"
          >
            <input
              class="p-inputtext p-component w-full"
              name="username"
            />
            <label
              class=""
            >
              اسم المستخدم
            </label>
          </span>
        </div>
        <div
          class="field col-12 p-2"
        >
          <span
            class="p-float-label"
          >
            <div
              class="p-password p-component p-inputwrapper w-full"
            >
              <input
                class="p-inputtext p-component p-password-input w-full"
                name="password"
                type="password"
              />
            </div>
            <label
              class=""
            >
              كلمة المرور
            </label>
          </span>
        </div>
        <div
          class="field col-12 p-2 mb-0"
        >
          <button
            aria-label="Login"
            class="p-button p-component w-full"
            type="submit"
          >
            <span
              class="p-button-label p-c"
            >
              تسجيل الدخول
            </span>
          </button>
        </div>
      </form>
    </div>
    <div
      class="loginLogo-0-2-18 loginPageFooter-0-2-20"
    />
  </div>
  <div
    class="fixed m-2 right-0"
  >
    <button
      class="p-button p-component mr-2"
      data-testid="register"
      id="/register"
      type="button"
    >
      <span
        class="p-button-label p-c"
      >
        يسجل
      </span>
    </button>
    <button
      class="p-button p-component p-button-icon-only"
    >
      <span
        class="p-button-icon p-c pi pi-sun"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </div>
</div>
`;

exports[`<App /> RegisterBG equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-component loginContainer-0-2-17"
  >
    <div
      class="loginLogo-0-2-18 loginPageHeader-0-2-19"
    />
    <div
      class="loginForm-0-2-21 shadow-3"
    >
      <div
        class="loginTitle-0-2-24"
      >
        Вход с парола
      </div>
      
      <form
        autocomplete="off"
        class="card formContainer-0-2-22"
      >
        <div
          class="field col-12 p-2"
        >
          <span
            class="p-float-label"
          >
            <input
              class="p-inputtext p-component w-full"
              name="username"
            />
            <label
              class=""
            >
              Потребител
            </label>
          </span>
        </div>
        <div
          class="field col-12 p-2"
        >
          <span
            class="p-float-label"
          >
            <div
              class="p-password p-component p-inputwrapper w-full"
            >
              <input
                class="p-inputtext p-component p-password-input w-full"
                name="password"
                type="password"
              />
            </div>
            <label
              class=""
            >
              Парола
            </label>
          </span>
        </div>
        <div
          class="field col-12 p-2 mb-0"
        >
          <button
            aria-label="Login"
            class="p-button p-component w-full"
            type="submit"
          >
            <span
              class="p-button-label p-c"
            >
              Вход
            </span>
          </button>
        </div>
      </form>
    </div>
    <div
      class="loginLogo-0-2-18 loginPageFooter-0-2-20"
    />
  </div>
  <div
    class="fixed m-2 right-0"
  >
    <button
      class="p-button p-component mr-2"
      data-testid="register"
      id="/register"
      type="button"
    >
      <span
        class="p-button-label p-c"
      >
        Регистрация
      </span>
    </button>
    <button
      class="p-button p-component p-button-icon-only"
    >
      <span
        class="p-button-icon p-c pi pi-sun"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </div>
</div>
`;
